Add footer copyright to dashboard

--- a/index.html
+++ b/index.html
@@ -212,6 +212,7 @@
                         </div>
                     </header>
 
+
                     <div class="table-container">
                         <table class="log-table">
                             <thead>
@@ -232,6 +233,9 @@
             </main>
         </section>
     </div>
+    <footer style="text-align: center; padding: 1rem; color: #64748b; font-size: 0.75rem;">
+        &copy; 2025 SysCall Secure Simulation
+    </footer>
     <script src="script.js"></script>
 </body>
 <!-- fixed name of user after login of standard user(earlier showed admin rather than standard user) -->
